dataset1235/2025-2/2868285114/users/1072499734/executions/3792430146_359761547.log
== SUBMISSION (2025-09-02 22:54:37)
-- CODE: 
#include <stdio.h>

int main() {
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga\n");
    } else {
        printf("nao_paga\n");
                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:57:40)
-- CODE: 
#include <stdio.h>

int main() {
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga");
    } else {
        printf("nao_paga");                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:59:12)
-- CODE: 
#include <stdio.h>

int main(){
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga");
    } else {
        printf("nao_paga");                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:59:11)
-- CODE: 
#include <stdio.h>

int main(){
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga");
    } else {
        printf("nao_paga");                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main(){
        ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:58:42)
-- CODE: 
#include <stdio.h>
int main() {
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga");
    } else {
        printf("nao_paga");                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:57:39)
-- CODE: 
#include <stdio.h>

int main() {
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga");
    } else {
        printf("nao_paga");                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:55:18)
-- CODE: 
#include <stdio.h>

int main() {
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga\n");
    } else {
        printf("nao_paga\n");                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:50:49)
-- CODE: 
#include <stdio.h>

int main() {
 int idade;
scanf("%d", &idade);

if (idade >= 2) {
   printf("paga\n");
}else {
   printf("nao_paga\");
          }

 return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:52:06)
-- CODE: 
#include <stdio.h>

int main() {
  int idade;
  scanf("%d", &idade);

  if (idade >= 2) {
     printf("paga\n");
}else {
     printf("nao_paga\");
          }

 return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:57:19)
-- CODE: 
#include <stdio.h>

int main() {
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga\");
    } else {
        printf("nao_paga\");                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:54:54)
-- CODE: 
#include <stdio.h>

int main() {
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga\n");
    } else {
        printf("nao_paga\n");                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:54:55)
-- CODE: 
#include <stdio.h>

int main() {
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga\n");
    } else {
        printf("nao_paga\n");                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    int main() {
        ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:54:19)
-- CODE: 
#include <stdio.h>

int main() {
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga\n");
    } else {
        printf("nao_paga\");
                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:57:06)
-- CODE: 
#include <stdio.h>

int main() {
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga\");
    } else {
        printf("nao_paga\n");                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 8
    printf("paga\");
           ^
SyntaxError: unterminated string literal (detected at line 8)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:52:16)
-- CODE: 
#include <stdio.h>

int main() {
  int idade;
  scanf("%d", &idade);

  if (idade >= 2) {
   printf("paga\n");
}else {
   printf("nao_paga\");
          }

 return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:53:50)
-- CODE: 
#include <stdio.h>

int main() {
    int idade;
    scanf("%d", &idade);

    if (idade >= 2) {
        printf("paga\n");
    }else {
        printf("nao_paga\");
                        
    }

    return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:52:15)
-- CODE: 
#include <stdio.h>

int main() {
  int idade;
  scanf("%d", &idade);

  if (idade >= 2) {
   printf("paga\n");
}else {
   printf("nao_paga\");
          }

 return 0;
}
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 10
    printf("nao_paga\");
           ^
SyntaxError: unterminated string literal (detected at line 10)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
